--- a/index.html
+++ b/index.html
@@ -3,102 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oppa | Core Tasker</title>
+    <title>Oppa | Elite Tasker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { background-color: #0f172a; color: #e2e8f0; font-family: sans-serif; }
-        .cube-checkbox {
-            width: 22px; height: 22px; border: 2px solid #475569;
-            cursor: pointer; position: relative; flex-shrink: 0;
-        }
+        body { background-color: #0f172a; color: #e2e8f0; font-family: sans-serif; -webkit-tap-highlight-color: transparent; }
+        .cube-checkbox { width: 22px; height: 22px; border: 2px solid #475569; cursor: pointer; position: relative; flex-shrink: 0; }
         .cube-checkbox.checked { background-color: #10b981; border-color: #10b981; }
-        .cube-checkbox.checked::after {
-            content: 'L'; transform: scaleX(-1) rotate(-45deg);
-            color: white; position: absolute; top: 1px; left: 5px; font-size: 14px;
-        }
-        .calendar-day { min-height: 60px; border: 1px solid #1e293b; background: #1e293b; cursor: pointer; }
-        .calendar-day.active { border: 2px solid #3b82f6; background: #0f172a; }
-        .sub-task { margin-left: 20px; border-left: 1px solid #334155; padding-left: 10px; }
+        .cube-checkbox.checked::after { content: '✔'; color: white; position: absolute; top: -2px; left: 3px; font-size: 14px; }
+        .calendar-day { min-height: 50px; background: #1e293b; cursor: pointer; border: 2px solid transparent; border-radius: 8px; }
+        .calendar-day.active { border-color: #3b82f6; background: #0f172a; }
+        .calendar-day.today { border: 1px solid #3b82f6; font-weight: bold; }
+        .sub-task-container { margin-left: 28px; border-left: 2px solid #334155; padding-left: 12px; margin-top: 8px; }
     </style>
 </head>
-<body class="p-4">
+<body class="p-4 pb-24">
     <div class="max-w-md mx-auto">
         <header class="flex justify-between items-center mb-6 border-b border-slate-700 pb-4">
-            <h1 class="text-2xl font-bold">Oppa <span class="text-blue-500 text-xs border border-blue-500 px-1 rounded">PRO</span></h1>
-            <button onclick="addTask()" class="bg-blue-600 text-white px-4 py-1 rounded text-sm font-bold">+ TASK</button>
+            <h1 class="text-2xl font-bold italic tracking-tighter">OPPA <span class="text-blue-500 text-xs border border-blue-500 px-1 rounded not-italic uppercase">Elite</span></h1>
+            <button onclick="addTask()" class="bg-blue-600 text-white px-4 py-2 rounded text-sm font-bold shadow-lg">+ NEW TASK</button>
         </header>
 
-        <div class="bg-slate-900 p-4 rounded-xl mb-6 shadow-lg border border-slate-800">
-            <div id="monthLabel" class="text-center font-bold mb-3 text-slate-400">MARCH 2026</div>
-            <div class="grid grid-cols-7 gap-1" id="calendarGrid"></div>
+        <div class="bg-slate-900 p-4 rounded-xl mb-6 shadow-2xl border border-slate-800">
+            <div class="flex justify-between items-center mb-4">
+                <button onclick="changeMonth(-1)" class="p-2 text-slate-400 font-bold">◀</button>
+                <div id="monthLabel" class="font-bold text-lg text-slate-200 uppercase tracking-widest">MARCH 2026</div>
+                <button onclick="changeMonth(1)" class="p-2 text-slate-400 font-bold">▶</button>
+            </div>
+            <div class="grid grid-cols-7 gap-1 text-center text-[10px] text-slate-500 font-black mb-2">
+                <div>SUN</div><div>MON</div><div>TUE</div><div>WED</div><div>THU</div><div>FRI</div><div>SAT</div>
+            </div>
+            <div id="calendarGrid" class="grid grid-cols-7 gap-1"></div>
         </div>
 
-        <div class="bg-slate-900 p-5 rounded-xl shadow-lg border border-slate-800">
-            <h2 id="viewDate" class="text-lg font-bold mb-4 text-blue-400">Today's Goals</h2>
-            <div id="taskList" class="space-y-4">
-                </div>
+        <div class="bg-slate-900 p-5 rounded-xl shadow-2xl border border-slate-800 mb-6">
+            <h2 id="viewDate" class="text-sm font-black mb-4 text-blue-500 uppercase tracking-tighter">Selected Date</h2>
+            <div id="taskList" class="space-y-6"></div>
+        </div>
+
+        <div class="bg-slate-900 p-4 rounded-xl border border-slate-800 opacity-60">
+            <p class="text-[10px] font-bold text-slate-500 uppercase mb-3">System Backup</p>
+            <div class="flex gap-2">
+                <button onclick="downloadBackup()" class="flex-1 bg-slate-800 text-[10px] py-2 rounded font-bold hover:bg-slate-700">💾 DOWNLOAD DATA</button>
+                <label class="flex-1 bg-slate-800 text-[10px] py-2 rounded font-bold hover:bg-slate-700 text-center cursor-pointer">
+                    📂 RESTORE
+                    <input type="file" class="hidden" onchange="restoreBackup(event)">
+                </label>
+            </div>
         </div>
     </div>
 
     <script>
         let tasks = JSON.parse(localStorage.getItem('oppa_tasks')) || {};
+        let currentViewDate = new Date();
         let selectedDate = new Date().toISOString().split('T')[0];
 
         function renderCalendar() {
             const grid = document.getElementById('calendarGrid');
+            const label = document.getElementById('monthLabel');
             grid.innerHTML = '';
-            for (let i = 1; i <= 31; i++) {
-                const dateStr = `2026-03-${i.toString().padStart(2, '0')}`;
+            const year = currentViewDate.getFullYear();
+            const month = currentViewDate.getMonth();
+            label.innerText = new Intl.DateTimeFormat('en-US', { month: 'long', year: 'numeric' }).format(currentViewDate).toUpperCase();
+            const firstDay = new Date(year, month, 1).getDay();
+            const daysInMonth = new Date(year, month + 1, 0).getDate();
+            for (let i = 0; i < firstDay; i++) grid.appendChild(document.createElement('div'));
+            for (let i = 1; i <= daysInMonth; i++) {
+                const dateStr = `${year}-${(month + 1).toString().padStart(2, '0')}-${i.toString().padStart(2, '0')}`;
                 const day = document.createElement('div');
-                day.className = `calendar-day flex flex-col items-center justify-center rounded ${selectedDate === dateStr ? 'active' : ''}`;
-                day.innerHTML = `<span class="text-xs font-bold">${i}</span>`;
+                const isToday = new Date().toISOString().split('T')[0] === dateStr;
+                day.className = `calendar-day flex items-center justify-center ${selectedDate === dateStr ? 'active' : ''} ${isToday ? 'today' : ''}`;
+                day.innerHTML = `<span class="text-xs">${i}</span>`;
                 day.onclick = () => { selectedDate = dateStr; renderCalendar(); renderTasks(); };
                 grid.appendChild(day);
             }
         }
 
+        function changeMonth(offset) { currentViewDate.setMonth(currentViewDate.getMonth() + offset); renderCalendar(); }
+
         function renderTasks() {
             const list = document.getElementById('taskList');
-            const dateTitle = document.getElementById('viewDate');
-            dateTitle.innerText = `Tasks: ${selectedDate}`;
+            document.getElementById('viewDate').innerText = selectedDate;
             list.innerHTML = '';
-            
             const dayTasks = tasks[selectedDate] || [];
-            dayTasks.forEach((task, index) => {
-                const div = document.createElement('div');
-                div.className = "flex items-start gap-3 p-2 bg-slate-800 rounded-lg";
-                div.innerHTML = `
-                    <div class="cube-checkbox ${task.done ? 'checked' : ''}" onclick="toggleTask(${index})"></div>
-                    <div class="flex-grow">
-                        <p class="text-sm ${task.done ? 'line-through text-slate-500' : ''}">${task.text}</p>
+            if (dayTasks.length === 0) list.innerHTML = '<p class="text-slate-700 text-xs italic text-center py-4">No tasks found.</p>';
+            dayTasks.forEach((task, tIdx) => {
+                const taskDiv = document.createElement('div');
+                let subTasksHtml = task.subs.map((s, sIdx) => `
+                    <div class="flex items-center gap-3 mb-2">
+                        <div class="cube-checkbox scale-75 ${s.done ? 'checked' : ''}" onclick="toggleSub(${tIdx}, ${sIdx})"></div>
+                        <p class="text-xs ${s.done ? 'line-through text-slate-500' : 'text-slate-400'}">${s.text}</p>
                     </div>
-                    <button onclick="deleteTask(${index})" class="text-slate-600 text-xs">X</button>
+                `).join('');
+                taskDiv.innerHTML = `
+                    <div class="p-3 bg-slate-800 rounded-lg border-l-4 border-blue-600">
+                        <div class="flex items-start gap-3">
+                            <div class="cube-checkbox ${task.done ? 'checked' : ''}" onclick="toggleMain(${tIdx})"></div>
+                            <div class="flex-grow">
+                                <p class="text-sm font-bold ${task.done ? 'line-through text-slate-600' : 'text-slate-200'}">${task.text}</p>
+                                <div class="sub-task-container">${subTasksHtml}</div>
+                                <button onclick="addSub(${tIdx})" class="text-[10px] text-blue-500 font-bold mt-2 hover:underline">+ ADD STEP</button>
+                            </div>
+                            <button onclick="deleteTask(${tIdx})" class="text-slate-600 text-xs">X</button>
+                        </div>
+                    </div>
                 `;
-                list.appendChild(div);
+                list.appendChild(taskDiv);
             });
         }
 
         function addTask() {
-            const val = prompt("Enter Task (e.g. CA Audit Prep):");
-            if (!val) return;
-            if (!tasks[selectedDate]) tasks[selectedDate] = [];
-            tasks[selectedDate].push({ text: val, done: false });
-            save();
+            const val = prompt("Main Task:");
+            if (val) { if (!tasks[selectedDate]) tasks[selectedDate] = []; tasks[selectedDate].push({ text: val, done: false, subs: [] }); save(); }
+        }
+        function addSub(tIdx) {
+            const val = prompt("Sub-step:");
+            if (val) { tasks[selectedDate][tIdx].subs.push({ text: val, done: false }); save(); }
+        }
+        function toggleMain(tIdx) { tasks[selectedDate][tIdx].done = !tasks[selectedDate][tIdx].done; save(); }
+        function toggleSub(tIdx, sIdx) { tasks[selectedDate][tIdx].subs[sIdx].done = !tasks[selectedDate][tIdx].subs[sIdx].done; save(); }
+        function deleteTask(tIdx) { if(confirm("Delete?")) { tasks[selectedDate].splice(tIdx, 1); save(); } }
+        function save() { localStorage.setItem('oppa_tasks', JSON.stringify(tasks)); renderTasks(); }
+
+        function downloadBackup() {
+            const blob = new Blob([JSON.stringify(tasks)], { type: 'application/json' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url; a.download = `oppa_backup_${selectedDate}.json`; a.click();
         }
 
-        function toggleTask(index) {
-            tasks[selectedDate][index].done = !tasks[selectedDate][index].done;
-            save();
-        }
-
-        function deleteTask(index) {
-            tasks[selectedDate].splice(index, 1);
-            save();
-        }
-
-        function save() {
-            localStorage.setItem('oppa_tasks', JSON.stringify(tasks));
-            renderTasks();
+        function restoreBackup(event) {
+            const reader = new FileReader();
+            reader.onload = (e) => { tasks = JSON.parse(e.target.result); save(); location.reload(); };
+            reader.readAsText(event.target.files[0]);
         }
 
         renderCalendar();
