--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <div class="max-w-md mx-auto">
         <div class="bg-gradient-to-r from-red-900 to-slate-900 p-3 rounded-lg mb-4 border border-red-800 shadow-lg text-center">
             <p class="text-[10px] font-black tracking-widest text-red-400 uppercase">CA Foundation Countdown</p>
-            <h2 id="countdownDisplay" class="text-xl font-bold text-white">Calculating...</h2>
+            <h2 id="countdownDisplay" class="text-xl font-bold text-white tracking-tight"></h2>
         </div>
 
         <header class="flex justify-between items-center mb-6 border-b border-slate-700 pb-4">
-            <h1 class="text-2xl font-bold italic tracking-tighter">OPPA <span class="text-blue-500 text-xs border border-blue-500 px-1 rounded not-italic uppercase">Elite</span></h1>
-            <button onclick="addTask()" class="bg-blue-600 text-white px-4 py-2 rounded text-sm font-bold shadow-lg">+ NEW TASK</button>
+            <h1 class="text-2xl font-bold italic tracking-tighter text-slate-100">OPPA <span class="text-blue-500 text-xs border border-blue-500 px-1 rounded not-italic uppercase">Elite</span></h1>
+            <button onclick="addTask()" class="bg-blue-600 hover:bg-blue-500 text-white px-4 py-2 rounded text-sm font-bold shadow-lg transition-all active:scale-95">+ NEW TASK</button>
         </header>
 
         <div class="bg-slate-900 p-4 rounded-xl mb-6 border border-slate-800 shadow-xl">
@@ -57,8 +57,8 @@
         </div>
 
         <div class="bg-slate-900 p-4 rounded-xl border border-slate-800 opacity-60 flex gap-2">
-            <button onclick="downloadBackup()" class="flex-1 bg-slate-800 text-[10px] py-2 rounded font-bold">💾 DOWNLOAD</button>
-            <label class="flex-1 bg-slate-800 text-[10px] py-2 rounded font-bold text-center cursor-pointer">
+            <button onclick="downloadBackup()" class="flex-1 bg-slate-800 text-[10px] py-2 rounded font-bold hover:bg-slate-700">💾 DOWNLOAD</button>
+            <label class="flex-1 bg-slate-800 text-[10px] py-2 rounded font-bold text-center cursor-pointer hover:bg-slate-700">
                 📂 RESTORE <input type="file" class="hidden" onchange="restoreBackup(event)">
             </label>
         </div>
@@ -69,21 +69,20 @@
         let currentViewDate = new Date();
         let selectedDate = new Date().toISOString().split('T')[0];
 
-        // SET YOUR EXAM DATE HERE (YYYY, Month Index (0-11), Day)
-        const EXAM_DATE = new Date(2026, 5, 20); // Example: June 20, 2026
+        // FIXED EXAM DATE: MAY 15, 2026 (Month 4 because counting starts at 0)
+        const EXAM_DATE = new Date(2026, 4, 15);
 
         function updateCountdown() {
             const now = new Date();
             const diff = EXAM_DATE - now;
             const days = Math.ceil(diff / (1000 * 60 * 60 * 24));
-            document.getElementById('countdownDisplay').innerText = days > 0 ? `${days} DAYS LEFT` : "EXAM DAY!";
+            document.getElementById('countdownDisplay').innerText = days > 0 ? `${days} DAYS LEFT` : (days === 0 ? "EXAM DAY!" : "EXAM FINISHED");
         }
 
         function updateProgress() {
             let done = 0, total = 0;
             const now = new Date();
             const startOfWeek = new Date(now.setDate(now.getDate() - now.getDay()));
-            
             for (let i = 0; i < 7; i++) {
                 const dateStr = new Date(startOfWeek).toISOString().split('T')[0];
                 if (tasks[dateStr]) {
@@ -130,7 +129,7 @@
             document.getElementById('viewDate').innerText = selectedDate;
             list.innerHTML = '';
             const dayTasks = tasks[selectedDate] || [];
-            if (dayTasks.length === 0) list.innerHTML = '<p class="text-slate-700 text-xs italic text-center py-4">No tasks found.</p>';
+            if (dayTasks.length === 0) list.innerHTML = '<p class="text-slate-700 text-xs italic text-center py-4">No goals set for this date.</p>';
             dayTasks.forEach((task, tIdx) => {
                 const taskDiv = document.createElement('div');
                 let subHtml = task.subs.map((s, sIdx) => `
@@ -145,9 +144,9 @@
                         <div class="flex-grow">
                             <p class="text-sm font-bold ${task.done ? 'line-through text-slate-600' : 'text-slate-100'}">${task.text}</p>
                             <div class="sub-task-container">${subHtml}</div>
-                            <button onclick="addSub(${tIdx})" class="text-[10px] text-blue-500 font-bold mt-2">+ STEP</button>
+                            <button onclick="addSub(${tIdx})" class="text-[10px] text-blue-500 font-bold mt-2 hover:underline">+ ADD STEP</button>
                         </div>
-                        <button onclick="deleteTask(${tIdx})" class="text-slate-600 text-xs">X</button>
+                        <button onclick="deleteTask(${tIdx})" class="text-slate-600 text-xs hover:text-red-500">X</button>
                     </div>
                 </div>`;
                 list.appendChild(taskDiv);
@@ -156,18 +155,18 @@
         }
 
         function addTask() {
-            const val = prompt("Task:");
+            const val = prompt("Enter Main Goal:");
             if (val) { if (!tasks[selectedDate]) tasks[selectedDate] = []; tasks[selectedDate].push({ text: val, done: false, subs: [] }); save(); renderCalendar(); }
         }
         function addSub(tIdx) {
-            const val = prompt("Step:");
+            const val = prompt("Enter Small Step:");
             if (val) { tasks[selectedDate][tIdx].subs.push({ text: val, done: false }); save(); }
         }
         function toggleMain(tIdx) { tasks[selectedDate][tIdx].done = !tasks[selectedDate][tIdx].done; save(); renderCalendar(); }
         function toggleSub(tIdx, sIdx) { tasks[selectedDate][tIdx].subs[sIdx].done = !tasks[selectedDate][tIdx].subs[sIdx].done; save(); }
-        function deleteTask(tIdx) { if(confirm("Delete?")) { tasks[selectedDate].splice(tIdx, 1); save(); renderCalendar(); } }
+        function deleteTask(tIdx) { if(confirm("Delete this mission?")) { tasks[selectedDate].splice(tIdx, 1); save(); renderCalendar(); } }
         function save() { localStorage.setItem('oppa_tasks', JSON.stringify(tasks)); renderTasks(); }
-        function downloadBackup() { const blob = new Blob([JSON.stringify(tasks)], { type: 'application/json' }); const url = URL.createObjectURL(blob); const a = document.createElement('a'); a.href = url; a.download = `oppa_backup.json`; a.click(); }
+        function downloadBackup() { const blob = new Blob([JSON.stringify(tasks)], { type: 'application/json' }); const url = URL.createObjectURL(blob); const a = document.createElement('a'); a.href = url; a.download = `oppa_elite_backup.json`; a.click(); }
         function restoreBackup(event) { const reader = new FileReader(); reader.onload = (e) => { tasks = JSON.parse(e.target.result); save(); renderCalendar(); }; reader.readAsText(event.target.files[0]); }
 
         updateCountdown();
